--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,12 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
+    - name: Build Docker Image
+      run: |
+            docker build -t mkumarda/appsecurity:1.0.0 .
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+            docker push mkumarda/appsecurity:1.0.0
+
+    
+
    
