--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,14 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
+    - name: Sonar Scan 
+      run: |
+         mvn clean verify sonar:sonar \
+          -Dsonar.projectKey=appsecurity \
+          -Dsonar.projectName='appsecurity' \
+          -Dsonar.host.url=http://hivemet.com:9000 \
+          -Dsonar.token=${{ secrets.APPSECURITY_KEY }}
+
     - name: Build Docker Image
       run: |
             docker build -t mkumarda/appsecurity:1.0.0 .
